# beaker-notebook

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.server.yaml  docker-compose.yaml  env.example  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-publish.yaml  docs-gh-pages.yml  playwright.yml  test-build-publish.yaml.disabled  testing.yaml
beaker-ts/: .gitignore  package-lock.json  package.json  vite.config.ts  vitest.config.ts
beaker-ts/.config/: typedoc.js
beaker-ts/src/: chatHistory.ts  index.ts  notebook.ts  render.ts  session.ts  util.ts
beaker-ts/src/__tests__/: session.execute.browser.test.ts  util.test.ts
beaker-ui/: .gitignore  index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
beaker-ui/src/: main.ts
beaker-ui/src/__tests__/: setup.ts
beaker-ui/src/assets/: index.ts
beaker-ui/src/pages/: BaseInterface.vue  BeakerAdmin.vue  ChatInterface.vue  DevInterface.vue  IntegrationsInterface.vue  NotebookInterface.vue  PlaygroundInterface.vue
beaker-ui/src/router/: index.ts
beaker-ui/src/services/: context.ts  fetch.ts  index.ts
beaker-ui/src/stores/: index.ts  kernelSessions.ts  ui.ts  workspaces.ts
beaker-vue/: .gitignore  npm_packages.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.lib.json  tsconfig.node.json  tsconfig.renderers.json  tsconfig.vitest.json  vite.config.app.ts  vite.config.lib.ts  vite.config.ts  vitest.config.ts
beaker-vue/src/: EXTENSION_API_VERSION.ts  files  index.ts  main.ts  renderers.ts
beaker-vue/src/__tests__/: renderers.spec.ts  setup.ts  test-utils.ts
beaker-vue/src/builder/: build.ts  extractRoutes.cts
beaker-vue/src/components/: index.ts
beaker-vue/src/composables/: index.ts  useIntegrationUpload.ts  useNotebookInterface.ts  useNotebookSnapshot.ts  useQueryCellFlattening.ts  useWorkflows.ts
beaker-vue/src/pages/: BaseInterface.vue  BeakerAdmin.vue  ChatInterface.vue  DevInterface.vue  IntegrationsInterface.vue  NextNotebookInterface.vue  NotebookInterface.vue  PlaygroundInterface.vue  index.ts
beaker-vue/src/plugins/: appconfig.ts  index.ts  install.ts  keys.ts
beaker-vue/src/router/: index.ts
beaker-vue/src/services/: context.ts
beaker-vue/src/stores/: contexts.ts  ui.ts
beaker-vue/src/types/: context.ts  fetch.ts  index.ts  workspace.ts
beaker-vue/src/util/: attachments.ts  autocomplete.ts  build.ts  fetch.ts  index.ts  integration.ts  markdown.ts  skillArchive.ts
beaker-vue/src/utils/: exportUtils.ts
beaker-vue/tests/: attachments.spec.ts
beaker-vue/utils/: extractRoutes.ts  postpack.ts  prepack.ts
beaker_kernel/: __init__.py  kernel.py
beaker_kernel/app/: base.py  dev_app.py  handlers.py  server_app.py
beaker_kernel/app/api/: handlers.py  notebook.py  subkernels.py
beaker_kernel/builder/: beaker.py  hooks.py  templates.py
beaker_kernel/cli/: context.py  main.py  project.py  running.py  subkernel.py
beaker_kernel/contexts/default/: agent.py  context.py
beaker_kernel/lib/: agent.py  app.py  autodiscovery.py  config.py  context.py  context_dump.py  kernel_state.py  notebook_state.py  subkernel.py  types.py  utils.py  workflow.py
beaker_kernel/lib/code_analysis/: analysis_agent.py
beaker_kernel/lib/exporters/: chat.py
beaker_kernel/lib/integrations/: adhoc.py  base.py  registry.py  skill.py  types.py
beaker_kernel/lib/templates/: agent_file.py  context_file.py  procedure_file.py
beaker_kernel/service/: auth.py  base.py  dev.py
beaker_kernel/service/api/: handlers.py  notebook.py
beaker_kernel/service/auth/: __init__.py  cognito.py
beaker_kernel/service/storage/: base.py
beaker_kernel/services/: __init__.py  session.py
beaker_kernel/services/auth/: __init__.py
beaker_kernel/services/context/: discovery_service.py  handlers.py  manager.py  util.py
beaker_kernel/services/datastore/: README.md  __init__.py  memory.py  records.py  sqlite.py
beaker_kernel/services/kernel/: __init__.py  datastore.py  manager.py  mappingmanager.py  provisioner.py  spec.py
beaker_kernel/services/session/: __init__.py
beaker_kernel/services/storage/: base.py  notebook.py
beaker_kernel/subkernels/: julia.py
beaker_kernel/util/: refactor.py
docker/: base.Dockerfile  dev.Dockerfile  docker-bake.hcl  notebook.Dockerfile  server.Dockerfile  wheel-builder.Dockerfile
docker/assets/: entry-point.sh  hupper_debug.py  install-local-packages.sh
docs/: README.md  _base.md  _config.yaml  _config_local.yaml  adding_contexts.md  adding_subkernels.md  beaker_ts.md  cli_config.md  cli_context.md  cli_notebook.md  cli_project.md  cli_reference.md  cli_subkernel.md  concept_agent.md  concept_contexts.md  concept_integrations.md  concept_previews.md  concept_subkernels.md  concept_workflows.md  context_development.md  context_workflows.md  contexts_agent.md  contexts_context.md  contexts_custom_messages.md  contexts_preview.md  contexts_procedures.md  debugging.md  development.md  getting_started.md  index.md  install.md  integration_development.md  integration_providers.md  integrations_api.md  jupyter.md  key_concepts.md  subkernel_creating.md  subkernel_development.md  subkernel_reflectors.md  ui_development.md  (+1 more)
src/beaker_kernel/: __init__.py
src/beaker_notebook/: __init__.py  kernel.json  kernel.py
tests/: test_agent_tools.py  test_chat_history_serde.py  test_context_dump.py  test_discover_workflows.py  test_get_providers_resilience.py  test_kernel_state.py  test_notebook_snapshot_storage.py  test_notebook_state.py  test_reflector.py  test_session_attachments.py  test_subkernel_tools.py  test_subkernel_verify.py  test_templates.py  test_trust_linter.py  test_workflow_tools.py
tests/code_analysis/: test_analysis_agent.py
tests/import_shim/: README.md  test_agent_tools.py  test_kernel_state.py  test_shims.py  test_templates.py  test_workflow_tools.py
tests/integrations/: test_adhoc_tools.py
tests/workflows/: test_discover_workflows.py  test_workflow_creation.py  test_workflow_tools.py
(+188 files in other folders)
